--- a/app/src/main/res/values-es/strings_alerts.xml
+++ b/app/src/main/res/values-es/strings_alerts.xml
@@ -95,7 +95,7 @@
     <string name="new_octoprint_version">Nueva versión de OctoPrint disponible! (v%s)</string>
     <string name="new_octoprint_release_candidate">Nuevo candidato a la versión de OctoPrint disponible! (v%s)</string>
 
-    <string name="promote_premium_message">¿Te gusta Printoid? ¿Es esta aplicación su mejor compañero para su impresora 3D?\n\nSi es así, y si lo desea, puede comprar Printoid PREMIUM en Google Play para apoyar al desarrollador.\n\n¡La versión Premium te brinda la posibilidad de crear tu propia interfaz física para Printoid!</string>
+    <string name="promote_premium_message">¡Apoye al desarrollador de Printoid y compre la versión PREMIUM de la aplicación!\n\nPrintoid PREMIUM es la mejor herramienta para su (s) impresora (s) 3D: transmisión de video, comandos personalizados, soporte de los complementos de OctoPrint, visores 2D y 3D, Widgets, integración con RollingUp (administrador de spool) y mucho más!</string>
 
     <string name="promote_donation_message">¿Te gusta Printoid Premium? ¿Es esta aplicación su mejor compañero para su impresora 3D?\n\nSi es así, y si lo desea, ¡puedes donar la cantidad que elijas para apoyar al desarrollador y su trabajo, y ayudar al desarrollo de nuevas y sorprendentes características!</string>
 
