--- a/app/src/main/res/values-de/strings_rta.xml
+++ b/app/src/main/res/values-de/strings_rta.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="alert_rate_app_title">Bewerte Printoid %s</string>
-    <string name="alert_rate_app_message">Du verwendest Printoid nun seit mehr als einer Woche - vielen Dank!\n\nWenn dir die App gefällt, wäre eine Bewertung für Printoid %s im Google Play Store klasse. Das ist der einfachste und beste Weg, den Entwickler zu unterstützen!</string>
+    <string name="alert_rate_app_message">Sie scheinen Printoid häufig zu verwenden. Vielen Dank!\nWenn Sie die App lieben, nehmen Sie sich bitte ein paar Sekunden Zeit, um sie bei Google Play zu bewerten. Dies ist eine gute Möglichkeit, den Entwickler zu unterstützen!\n(Wenn Sie die App genießen, ist 5⭐ eine gute Anmerkung!)</string>
 
+    <string name="rate_app_button_ok">OK, kein Problem!!</string>
     <string name="rate_app_button_never">Nie</string>
     <string name="rate_app_button_later">Später</string>
 
