--- a/app/src/main/res/values-pt/strings_rta.xml
+++ b/app/src/main/res/values-pt/strings_rta.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="alert_rate_app_title">Avalie o Printoid %s</string>
-    <string name="alert_rate_app_message">Você está usando o Printoid há mais de uma semana, obrigado!\n\nSe você gostou do aplicativo, não hesite em avaliar Printoid %s no Google Play! Esta é a melhor maneira de apoiar o desenvolvedor!</string>
+    <string name="alert_rate_app_message">Você parece usar muito o Printoid, obrigado!\nSe você adora o aplicativo, reserve alguns segundos para avaliá-lo no Google Play, é uma boa maneira de apoiar o desenvolvedor!\n(se você gosta do aplicativo, 5⭐ é uma boa nota!)</string>
 
+    <string name="rate_app_button_ok">OK, não há problema!</string>
     <string name="rate_app_button_never">Nunca</string>
     <string name="rate_app_button_later">Agora não</string>
 
