--- a/app/src/main/res/values-ru/strings_rta.xml
+++ b/app/src/main/res/values-ru/strings_rta.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="alert_rate_app_title">Оцените Printoid %s</string>
-    <string name="alert_rate_app_message">Оценка Printoid %s - это лучшая поддержка для разработчика, если Вам понравилось приложение.\nХотите добавить коментарий в Google Play сейчас?</string>
+    <string name="alert_rate_app_message">Кажется, вы часто используете Printoid, спасибо!\nЕсли вам нравится приложение, потратьте несколько секунд, чтобы оценить его в Google Play, это хороший способ поддержать разработчика!\n(если вам нравится приложение, 5⭐ хорошая заметка!)</string>
 
+    <string name="rate_app_button_ok">ОК, нет проблем!</string>
     <string name="rate_app_button_never">Никогда</string>
     <string name="rate_app_button_later">Позже</string>
 
